chore: fixing small visual issue (missing margintop in not found text)

--- a/frontend/src/components/costumers/sections/CostumersSection/CostumerList/style.module.scss
+++ b/frontend/src/components/costumers/sections/CostumersSection/CostumerList/style.module.scss
@@ -13,3 +13,7 @@
     gap: 30px;
     margin-top: 30px;
 }
+
+.notfound{
+    margin-top: 30px;
+}
